--- a/src/templates/3. sections/Header/Header.module.scss
+++ b/src/templates/3. sections/Header/Header.module.scss
@@ -57,7 +57,6 @@
 .about {
   overflow: auto;
   max-height: rem(150);
-  margin-top: rem(10);
 }
 
 .footer {
@@ -67,7 +66,6 @@
 .powered {
   display: flex;
   justify-content: center;
-  margin-top: rem(15);
 
   &__link {
     @include trans;
@@ -80,13 +78,8 @@
 }
 
 .trigger {
-  margin-top: rem(15);
   text-align: center;
   transition: opacity 0.9s;
-
-  @include tablet {
-    margin-top: rem(20);
-  }
 
   &__button {
     @include trans;
@@ -123,7 +116,7 @@
     right: -9999px;
     bottom: rem(15);
     opacity: 0;
-    margin-top: 0;
+    margin: 0;
 
     @include laptop {
       bottom: rem(25);
