--- a/src/templates/1. elements/Tags/Tags.module.scss
+++ b/src/templates/1. elements/Tags/Tags.module.scss
@@ -4,8 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin: 0 rem(-10);
-  margin-bottom: rem(10);
+  margin: 0 rem(-10) rem(-10);
 }
 
 .tag {
