--- a/src/templates/1. elements/PageLink/PageLink.module.scss
+++ b/src/templates/1. elements/PageLink/PageLink.module.scss
@@ -4,7 +4,7 @@
   @include trans;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   margin: 0 rem(-10);
   color: $color-title;
 
